<resources>
    <string name="about_answer1">The Ubooquity server MUST enable OPDS feed.
    \n \nThe Ubooquity server MUST open the appropriate network port.
    \n \nThe Ubooquity server MUST be allowed through any firewalls.
    \n \nYou MUST use the following format:\n Example: \"http://192.168.0.1:2202/opds-comics/\"</string>
    <string name="about_answer2">Bookmarking is a hybrid system, leveraging both remote and local databases. First the system uses a local bookmark and then searches for a remote bookmark if available. If a remote bookmark is found, it is given preference. This is to support \"legacy\" apps that have not upgraded to Ubooquity 2.0.+ yet.
    \n\nEpub files do not support server side bookmarking.</string>
    <string name="about_answer3">Dual pane forces landscape mode and splits the screen for two pages.
    \n\nIf dual pane is enabled and you see a single page it is because of these reasons:
    \n\n- The image is a cover page.
    \n- The image is considered WIDE.
    \n- The NEXT image is considered WIDE, requiring an entire page for itself.
    \n\nImage is considered WIDE if the width is greater or equal to the length.</string>
    <string name="about_answer4">You can change the thumbnail size in the Ubooquity server software.</string>
    <string name="about_app_disclaimer">\"Kuboo\" is an independent third party application not affiliated with Ubooquity in any manner.\n
    \n\"Kuboo\" provides unrestricted access to the internet and is not responsible for the availability or content of these external sources.
    \n \n</string>
    <string name="about_develop_message">I have developed this project for my own personal use. My goal is to share it and contribute to a niche reading community.
    \n \nThank you everyone for the feedback and support.
    \n \nSpecial thanks to Tom for creating Ubooquity.</string>
    <string name="about_developer_email">sethchhim@gmail.com</string>
    <string name="about_developer_name">Seth Chhim</string>
    <string name="about_faq">FAQ</string>
    <string name="about_google_disclaimer">• Google Play and the Google Play logo are trademarks of Google Inc.</string>
    <string name="about_info">• Powered by the love of reading.
    \n \n• Free and open source.
    \n \n• No Ads, No Special Permissions.
    \n \n• Designed and tested for Ubooquity %1$s.
    \n \n• Feedback and bug reports are welcome.</string>
    <string name="about_library">Library</string>
    <string name="about_license">License</string>
    <string name="about_question1">Why can\'t I connect to a Ubooquity server?</string>
    <string name="about_question2">How does the bookmarking work?</string>
    <string name="about_question3">How does dual pane work?</string>
    <string name="about_question4">Why are my thumbnails pixelated?</string>
    <string name="app_label">Kuboo</string>
    <string name="app_label_debug">Kuboo Debug</string>
    <string name="browser_favorite">Favorite</string>
    <string name="browser_folder">Folder</string>
    <string name="browser_media">Media</string>
    <string name="browser_next">NEXT</string>
    <string name="browser_page">page</string>
    <string name="browser_pages">pages</string>
    <string name="browser_previous">PREVIOUS</string>
    <string name="browser_something_went_wrong">Something went wrong!</string>
    <string name="dialog_bookmark_found">Bookmark found!</string>
    <string name="dialog_browse">Browse</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_connecting_to_server">Connecting to Server</string>
    <string name="dialog_connection_is_encrypted">Connection is encrypted</string>
    <string name="dialog_copy_to_clipboard">Copy to clipboard</string>
    <string name="dialog_decline_bookmark">Decline bookmark</string>
    <string name="dialog_default">Default</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_download">Download</string>
    <string name="dialog_download_tracking">Download Tracking</string>
    <string name="dialog_download_tracking_message">Download tracking is a feature that automatically downloads books in a series for you. After you finish reading a book, it is deleted off your device and the next upcoming issues are queued for download. The number of items queued can be set in SETTINGS.\n</string>
    <string name="dialog_file_does_not_exist">File does not exist!</string>
    <string name="dialog_font">Font</string>
    <string name="dialog_loading_assets">Loading Assets</string>
    <string name="dialog_loading_bookmark">Loading Bookmark</string>
    <string name="dialog_loading_dual_pane_mode">Loading dual pane mode</string>
    <string name="dialog_loading_single_pane_mode">Loading single pane mode</string>
    <string name="dialog_local_file">Local File</string>
    <string name="dialog_margin">Margin</string>
    <string name="dialog_of">of</string>
    <string name="dialog_open_series">Open Series</string>
    <string name="dialog_please_restart_to_apply_changes">Please restart to apply changes.</string>
    <string name="dialog_please_wait">Please wait…</string>
    <string name="dialog_rate">Rate</string>
    <string name="dialog_remote_file">Remote File</string>
    <string name="dialog_remove">REMOVE</string>
    <string name="dialog_remove_recently_viewed">Remove recently viewed?</string>
    <string name="dialog_restart">Restart</string>
    <string name="dialog_restart_required">Restart required</string>
    <string name="dialog_resume_chapter">Resume chapter </string>
    <string name="dialog_resume_page">Resume page</string>
    <string name="dialog_retry">RETRY</string>
    <string name="dialog_single_pane">Single Pane</string>
    <string name="dialog_total">Total</string>
    <string name="dialog_undo">UNDO</string>
    <string name="downloads_cancelled">Cancelled</string>
    <string name="downloads_connection_timed_out">CONNECTION TIMED OUT</string>
    <string name="downloads_download_not_found">DOWNLOAD NOT FOUND</string>
    <string name="downloads_empty_response_from_server">EMPTY RESPONSE FROM SERVER</string>
    <string name="downloads_fetch_database_error">FETCH DATABASE ERROR</string>
    <string name="downloads_file_not_created">FILE NOT CREATED</string>
    <string name="downloads_finished">FINISHED</string>
    <string name="downloads_free">free</string>
    <string name="downloads_http_not_found">HTTP NOT FOUND</string>
    <string name="downloads_no_network_connection">NO NETWORK CONNECTION</string>
    <string name="downloads_no_storage_space">NO STORAGE SPACE</string>
    <string name="downloads_of">of</string>
    <string name="downloads_pause_all">Pause All</string>
    <string name="downloads_paused">Paused</string>
    <string name="downloads_queued">Queued</string>
    <string name="downloads_request_already_exist">REQUEST ALREADY EXIST</string>
    <string name="downloads_resume">RESUME</string>
    <string name="downloads_resume_all">Resume All</string>
    <string name="downloads_retry">RETRY</string>
    <string name="downloads_uknown_host">UNKNOWN HOST</string>
    <string name="downloads_unknown">UNKNOWN</string>
    <string name="downloads_write_permission_denied">WRITE PERMISSION DENIED</string>
    <string name="login_active_server_removed">Active server removed!</string>
    <string name="login_add_server">Add Server</string>
    <string name="login_delete_server">Delete Server</string>
    <string name="login_does_not_contain_opds_books_or_opds_comics">Does not contain /opds-books/ or /opds-comics/</string>
    <string name="login_edit_server">Edit Server</string>
    <string name="login_example">Example</string>
    <string name="login_ip_address">IP Address (Required)</string>
    <string name="login_ip_address_must_not_be_empty">IP Address must not be empty!</string>
    <string name="login_password">Password (Optional)</string>
    <string name="login_server_name">Server Name (Optional)</string>
    <string name="login_server_removed">Server removed!</string>
    <string name="login_servers">Servers</string>
    <string name="login_show">Show</string>
    <string name="login_something_went_wrong">Something went wrong!</string>
    <string name="login_username">Username (Optional)</string>
    <string name="main_about">About</string>
    <string name="main_browse">Browse</string>
    <string name="main_cancel">Cancel</string>
    <string name="main_close_drawer">Close Drawer</string>
    <string name="main_decline">Decline</string>
    <string name="main_downloads">Downloads</string>
    <string name="main_failed_to_load_assets">Failed to load assets!</string>
    <string name="main_https">Https</string>
    <string name="main_latest_added">Latest Added</string>
    <string name="main_latest_no_items_found">No Items Found!</string>
    <string name="main_log">Log</string>
    <string name="main_more">MORE</string>
    <string name="main_recently_viewed">Recently Viewed</string>
    <string name="main_search">Search</string>
    <string name="main_start_reading_to_add_items">Start reading to add items!</string>
    <string name="reader_aspect_fill">Aspect Fill</string>
    <string name="reader_aspect_fit">Aspect Fit</string>
    <string name="reader_aspect_fit_width">Fit Width</string>
    <string name="reader_dual_pane">Dual Pane</string>
    <string name="reader_manga_mode">Manga Mode</string>
    <string name="settings_about">About</string>
    <string name="settings_active_server">Active Server</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_home_recently_viewed_height_offset">Recently Viewed Height Offset</string>
    <string name="settings_adjust_height_offset_of_the_recently_viewed_row">Adjust height offset of the recently viewed row. This only applies when the home screen includes multiple child rows.</string>
    <string name="settings_browser">Browser</string>
    <string name="settings_content_starts_from_the_bottom_towards_top">Content starts from bottom towards top</string>
    <string name="settings_download">Download</string>
    <string name="settings_favorite">Favorite</string>
    <string name="settings_finished_items_will_be_darkened">Finished items will be darkened</string>
    <string name="settings_force_downsizing">Force Downsizing</string>
    <string name="settings_force_downsizing_summary">Lower resolution of images to prevent out of memory errors</string>
    <string name="settings_home">Home</string>
    <string name="settings_keep_screen_on">Keep Screen On</string>
    <string name="settings_layout">Layout</string>
    <string name="settings_mark_finished">Mark Finished</string>
    <string name="settings_orientation">Orientation</string>
    <string name="settings_preview">Preview</string>
    <string name="settings_protect_your_mobile_data_limit">Protect your mobile data limit</string>
    <string name="settings_reader">Reader</string>
    <string name="settings_reader_screen_will_keep_the_device_awake">Reader screen will keep the device awake</string>
    <string name="settings_reverse_layout">Reverse Layout</string>
    <string name="settings_save_path">Save Path</string>
    <string name="settings_server">Server</string>
    <string name="settings_show_favorite_buttons">Show favorite buttons</string>
    <string name="settings_show_preview_page_before_reading">Show preview page before reading</string>
    <string name="settings_system">System</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_tracking_interval">Tracking Interval</string>
    <string name="settings_tracking_limit">Tracking Limit</string>
    <string name="settings_version">Version</string>
    <string name="settings_volume_buttons_will_turn_page">Volume buttons will turn the page</string>
    <string name="settings_volume_page_turn">Volume Page Turn</string>
</resources>