<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/reader_aspect_fill"
            android:title="@string/reader_aspect_fill"
            app:showAsAction="never"/>
        <item
            android:id="@+id/reader_aspect_fit"
            android:title="@string/reader_aspect_fit"
            app:showAsAction="never"/>
        <item
            android:id="@+id/reader_aspect_fit_width"
            android:title="@string/reader_aspect_fit_width"
            app:showAsAction="never"/>
    </group>

    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/reader_local"
            android:icon="@drawable/ic_sd_storage_green_24dp"
            android:title="@string/reader_local"
            android:visible="false"
            app:showAsAction="always"/>
    </group>

    <group
        android:id="@+id/group3">
        <item
            android:id="@+id/reader_dual_pane_mode"
            android:icon="@drawable/ic_view_stream_grey_24dp"
            android:title="@string/reader_dual_pane"
            app:showAsAction="always"/>
    </group>

    <group
        android:id="@+id/group4">
        <item
            android:id="@+id/reader_manga_mode"
            android:icon="@drawable/ic_swap_horiz_grey_24dp"
            android:title="@string/reader_manga_mode"
            app:showAsAction="always"/>
    </group>

</menu>