<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/home_layout_latest_textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_latest_added"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/home_layout_latest_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/main_more"
            android:textColor="#009688"
            android:textSize="15sp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_layout_latest_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/home_layout_latest_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/main_latest_no_items_found"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="gone"/>

</LinearLayout>