<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home_layout_recent_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:text="@string/main_recently_viewed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/home_layout_recent_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/main_more"
        android:textColor="#009688"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/home_layout_recent_textView1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.sethchhim.kuboo_client.ui.main.home.custom.RecentRecyclerView
        android:id="@+id/home_layout_recent_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarSize="2dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_layout_recent_textView1"/>

    <TextView
        android:id="@+id/home_layout_recent_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_start_reading_to_add_items"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/md_white_1000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_layout_recent_textView1"/>

</android.support.constraint.ConstraintLayout>